After first video instructions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navDefault">
+    <button>Dropdown</button>
+
+    <ul class="dropdownMenu">
+        <li class="dropdownItem"><a href="#" class="dropdownLink">Link</a></li>
+        <li class="dropdownItem"><a href="#" class="dropdownLink">Link</a></li>
+        <li class="dropdownItem"><a href="#" class="dropdownLink">Link</a></li>
+        <li class="dropdownItem"><a href="#" class="dropdownLink">Link</a></li>
+    </ul>
+    </nav>
 </body>
 </html>
